--- a/html/cyfw/cyfwzy_1.html
+++ b/html/cyfw/cyfwzy_1.html
@@ -550,7 +550,7 @@
 				<el-tabs v-model="activeName" id="enterpriseDaoHang" @tab-click="handleClick">
 					<el-tab-pane label="全部" name="first">
 						<div v-for="item in enterpriseMes">
-							<div class="butSize" @click="butZhanClick('first',item.label)" v-if="item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
@@ -560,7 +560,7 @@
 								<span class="butText">{{item.butName}}</span>
 							</div>
 
-							<div class="butSize" @click="butZhanClick('first',item.label)" v-if="shengName!='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="shengName!='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
@@ -569,7 +569,7 @@
 					</el-tab-pane>
 					<el-tab-pane label="新办企业" name="second">
 						<div v-for="item in enterpriseMes">
-							<div class="butSize" @click="butZhanClick('second',item.label)" v-if="item.classifyMes==1&&item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="item.classifyMes==1&&item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
@@ -580,7 +580,7 @@
 							</div>
 
 
-							<div class="butSize" @click="butZhanClick('second',item.label)" v-if="item.classifyMes==1&&shengName!='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="item.classifyMes==1&&shengName!='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
@@ -589,7 +589,7 @@
 					</el-tab-pane>
 					<el-tab-pane label="企业日常" name="third">
 						<div v-for="item in enterpriseMes">
-							<div class="butSize" @click="butZhanClick('third',item.label)" v-if="item.classifyMes==2&&item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="item.classifyMes==2&&item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
@@ -600,7 +600,7 @@
 							</div>
 
 
-							<div class="butSize" @click="butZhanClick('third',item.label)" v-if="item.classifyMes==2&&shengName!='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="item.classifyMes==2&&shengName!='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
@@ -609,7 +609,7 @@
 					</el-tab-pane>
 					<el-tab-pane label="投资项目" name="fourth">
 						<div v-for="item in enterpriseMes">
-							<div class="butSize" @click="butZhanClick('fourth',item.label)" v-if="item.classifyMes==3&&item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="item.classifyMes==3&&item.isOk==true&&shengName=='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
@@ -620,7 +620,7 @@
 							</div>
 
 
-							<div class="butSize" @click="butZhanClick('fourth',item.label)" v-if="item.classifyMes==3&&shengName!='广东省'" :tabindex="item.label">
+							<div class="butSize" @click="butZhanClick(item.label)" v-if="item.classifyMes==3&&shengName!='广东省'" :tabindex="item.label">
 								<el-image class="butIcon" :src="item.butImg" fit="fill"></el-image>
 								<el-image class="butIcon_w" :src="item.butImgTwo" fit="fill"></el-image>
 								<span class="butText">{{item.butName}}</span>
