--- a/html/cyfw/cyfwzy_1.html
+++ b/html/cyfw/cyfwzy_1.html
@@ -44,13 +44,14 @@
 			background:rgba(255,255,255,1);
 			box-shadow:0px 20px 40px 0px rgba(239,239,239,0.5);
 			border:1px solid rgba(239,239,239,1);
-			padding:24px 22px 30px 20px;
+			padding:0px;
 			margin:0px;
 		}
 		#addressHead{
 			width:100%;
 			padding-bottom:11px;
 			border-bottom:1px solid #E4E9EF;
+			padding:24px 22px 20px 20px;
 		}
 		.valueText{
 			margin-right:9px;
@@ -69,8 +70,10 @@
 		#addressMes{
 			width:100%;
 			float: left;
-			padding:30px 0px 10px 0px;
+			padding:24px 22px 30px 20px;
 			border-bottom:1px solid #E4E9EF;
+			background: rgba(255,255,255,1);
+			
 		}
 		.addressBut{
 			float:left;
@@ -488,7 +491,7 @@
 					</div>
 					<div>
 						<!--/地址对话框-->
-						<el-popover v-model="visible" ref="popover" placement="bottom-start" style="padding:0px;"  trigger="click">
+						<el-popover v-model="visible" ref="popover" placement="bottom-start" style="padding:0px;background:#ffffff;"  trigger="click">
 							<div id="addressPopover">
 								<div id="addressHead">
 									<span v-if="shengName" @click="shengDiv=true;chengshiDiv=false;xianDiv=false;" class="valueText shouXing">{{shengName}}</span>
@@ -508,13 +511,13 @@
 								<div id="addressMes"  v-show="xianDiv">
 									<div class="addressBut"  @click="clickXianFunc(index,item)" v-for="(item,index) in xianData">{{item}}</div>
 								</div>
-								<div id="tiShiMes">
+								<!--<div id="tiShiMes">
 									您选择的是：{{xuanZeTitle}}
-								</div>
-								<div class="butDiv">
+								</div> -->
+								<!-- <div class="butDiv">
 									<el-button @click="visible = !visible" class="queDingBut" tabindex="1" round>确定</el-button>
 									<el-button @click="visible = !visible" class="quXiaoBut"  round>取消</el-button>
-								</div>
+								</div> -->
 							</div>
 							
 						</el-popover>
