--- a/html/cyfw/cyfwzy_1.html
+++ b/html/cyfw/cyfwzy_1.html
@@ -716,11 +716,38 @@
 					<el-row class="serveCard" :gutter="20">
 						<el-col :span="8" v-for="item in matterNameList.slice((currPage-1)*pageSize,currPage*pageSize)">
 							<div class="affairKuang" :tabindex="item.label">
-								<div class="affairKuangNoe">{{item.matterName}}</div>
+
+								<!--<div class="affairKuangNoe">{{item.matterName}}</div>
 								<div class="affairKuangThree">
 									<span class="affairKuangLeft">{{item.site}}</span>
 									<span class="affairKuangRight">{{item.fangShiLeft}}</span>
-								</div>
+								</div>-->
+
+								<div class="affairKuangNoe">{{item.matterName}}</div> 
+								<!-- 网约车平台公司或分公司许可证件补办 --> 
+								<div v-if="item.matterName=='网约车平台公司或分公司许可证件补办'" class="affairKuangThree"> 
+									<span class="affairKuangLeft">{{item.site}}</span>
+									<span @click="linkFunc('../../html/zxbl/zxbl-wyc.html')" class="affairKuangRight">{{item.fangShiLeft}}</span> 
+								</div> 
+								<!-- 勘查、开采矿藏和各项建设工程占用或者征收、征用林地审核 --> 
+								<div v-else-if="item.matterName=='勘查、开采矿藏和各项建设工程占用或者征收、征用林地审核'" class="affairKuangThree"> 
+									<span class="affairKuangLeft">{{item.site}}</span>
+									<span @click="linkFunc('../../html/zxbl/zxbl-kckz.html')" class="affairKuangRight">{{item.fangShiLeft}}</span> 
+								</div> 
+								<!-- 市水务局-生产建设项目水土保持设施自主验收报备 --> 
+								<div v-else-if="item.matterName=='市水务局-生产建设项目水土保持设施自主验收报备'" class="affairKuangThree"> 
+									<span class="affairKuangLeft">{{item.site}}</span>
+									<span @click="linkFunc('../../html/zxbl/zxbl-gcjs.html')" class="affairKuangRight">{{item.fangShiLeft}}</span> 
+								</div> 
+									<!-- 设立社会艺术水平考级机构审批 --> 
+								<div v-else-if="item.matterName=='设立社会艺术水平考级机构审批'" class="affairKuangThree"> 
+									<span class="affairKuangLeft">{{item.site}}</span>
+									<span @click="linkFunc('../../html/zxbl/zxbl-ysjgsp.html')" class="affairKuangRight">{{item.fangShiLeft}}</span> 
+								</div> 
+								<div v-else class="affairKuangThree"> 
+									<span class="affairKuangLeft">{{item.site}}</span>
+									<span class="affairKuangRight">{{item.fangShiLeft}}</span> 
+								</div> 
 							</div>
 						</el-col>
 					</el-row>
